# xiaoya-data-analysis

./: .gitignore  README.md  R_SETUP_GUIDE.md  main.py  pyproject.toml  test_rm_anova.py
docs/: 表格prompt.md  访谈prompt.md
results/: README_directory_structure.md
scripts/: analyze_basic_info.py  extract_basic_info.py  extract_feature_usefulness.py  extract_interview_data.py  extract_sus_data.py  simple_merge.py
scripts/analysis/: analyze_ai_model_thresholds.py  analyze_basic_info.py  analyze_comprehensive_performance.py  analyze_confidence.py  analyze_efficiency.py  analyze_optimized_ai_performance.py  analyze_trust_scale.py  analyze_workload.py  analyze_xy_nephrology_focus.py
scripts/extraction/: extract_basic_info_csv.py  extract_feature_usefulness.py  extract_headers.py  extract_sus_data.py
scripts/processing/: create_seniority_classification.py  inspect_excel_headers.py
scripts/utils/: rm_anova_analysis.py
scripts/visualization/: visualize_trust_analysis.py
